# PDx

./: BACKUP_RECOVERY_DOCUMENTATION.md  CMakeLists.txt  COMPLETE_REMAINING_ISSUES_AND_SOLUTIONS.md  CONFIGURATION_CONSISTENCY_DOCUMENTATION.md  Cargo.toml  Cargo_full.toml  DATA_FORMAT_PRESERVATION_ISSUE.md  DEPLOYMENT.md  Dockerfile  FINAL_CRITICAL_ISSUES_ANALYSIS.md  INTEGER_OVERFLOW_PROTECTION.md  MEMORY_MANAGEMENT_DOCUMENTATION.md  MODULE_COMPILATION_STRATEGY.md  PERFORMANCE_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  REFERENCE_VALIDATION_DOCUMENTATION.md  REGEX_SECURITY_DOCUMENTATION.md  RESOURCE_EXHAUSTION_PROTECTION.md  SCRUBBER_ALGORITHMS_DOCUMENTATION.md  SECURITY_CONSIDERATIONS.md  SECURITY_VALIDATION_REPORT.md  STREAM_TYPE_SAFETY_DOCUMENTATION.md  THREAD_SAFETY_VERIFICATION.md  USAGE_GUIDELINES.md  advanced_pattern_recognizer.cpp  advanced_pattern_recognizer.hpp  anti_fingerprint_engine.cpp  anti_fingerprint_engine.hpp  benchmark_results.md  binary_signature_camouflage.cpp  binary_signature_camouflage.hpp  build.sh  cache_manager.cpp  cache_manager.hpp  ci_output_check.sh  cloner.cpp  cloner.hpp  complete_output_suppressor.hpp  complete_silence_enforcer.hpp  (+128 more)
src/: compression.rs  config.rs  document.rs  encodings.rs  encryption.rs  error.rs  lib.rs  logger.rs  macros.rs  main.rs  metadata.rs  metadata_utils.rs  mod.rs  object.rs  object_stream.rs  parser.rs  password.rs  pdf.rs  pdf_doc.rs  pdf_metadata.rs  pdf_reader.rs  pdf_restrictions.rs  pdf_writer.rs  permission.rs  security.rs  stream.rs  string.rs  string_utils.rs  timestamp.rs  types.rs  utils.rs  validator.rs  verifier.rs  wasm.rs  writer.rs  xmp.rs  xmp_metadata.rs  xmp_utils.rs  xobject.rs  xref.rs  (+4 more)
src/cli/: args.rs  interface.rs  mod.rs
src/encoding_tables/: mac_expert.rs  mac_roman.rs  mod.rs  pdf_doc.rs  standard.rs  win_ansi.rs
src/extractor/: encryption.rs  metadata.rs  mod.rs  timestamps.rs  trailer.rs  xref.rs
src/injector/: encryption.rs  metadata.rs  mod.rs  timestamps.rs  trailer.rs  watermark_filter.rs  xref.rs
src/io/: file.rs  json.rs  mod.rs
src/zstream/: error.rs  flate.rs  mod.rs
src/zstream2/: flate.rs  mod.rs
