[package]
name = "pdf-forensic"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
memmap2 = "0.9"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
console = "0.15"
indicatif = "0.17"
csv = "1.1"